# Nihil

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Core/: CMakeLists.txt
Core/Source/: pch.hpp
Core/Source/Common/: Application.hpp  Defines.hpp  Event.cpp  Event.hpp  Input.cpp  Input.hpp  Utilities.hpp
Core/Source/Math/: Mat4.hpp  Math.hpp  Rect.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Core/Source/Platform/: DynamicLibrary.hpp  MappedFile.hpp  Platform.hpp  UUID.hpp
Core/Source/Platform/Win32/: PlatformWin32.cpp  Win32MappedFile.cpp  Win32Platform.cpp  Win32Platform.hpp  Win32UUID.cpp
Core/Tests/: CMakeLists.txt  Mat4.tests.cpp  Rect.tests.cpp  UUID.tests.cpp  Vec3.tests.cpp
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp  Editor.hpp  Main.cpp  Sandbox.cpp  Sandbox.hpp
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: DefaultObject.fs.glsl  DefaultObjectShader.frag.glsl  DefaultObjectShader.vert.glsl  DefaultUI.fs.glsl  DefaultUI.vs.glsl  test.vert.glsl
Engine/Source/: Nihil.hpp  pch.hpp
Engine/Source/AssetManager/: AssetManager.hpp  Compression.cpp  Compression.hpp  PackedAssetManager.cpp  PackedAssetManager.hpp  PakFile.cpp  PakFile.hpp  PakReader.cpp  PakReader.hpp  PakWriter.hpp  RawAssetManager.cpp  RawAssetManager.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp
Engine/Source/AssetPipeline/: AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetPipeline.cpp  AssetPipeline.hpp  Compression.cpp  Compression.hpp  Manifest.cpp  Manifest.hpp  PackedAssetManager.cpp  PackedAssetManager.hpp  PakFile.hpp  PakReader.cpp  PakReader.hpp  PakWriter.cpp  PakWriter.hpp  RawAssetManager.cpp  RawAssetManager.hpp  ShaderCompiler.hpp
Engine/Source/Core/: Application.hpp  AssetManager.cpp  AssetManager.hpp  Defines.hpp  Engine.cpp  Engine.hpp  Event.cpp  Event.hpp  Exception.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Utilities.cpp  Utilities.hpp
Engine/Source/Graphics/: Buffer.hpp  Camera.cpp  Camera.hpp  DefaultResource.hpp  Material.hpp  MaterialInstance.cpp  MaterialInstance.hpp  Mesh.hpp  Model.hpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.hpp  RendererBackend.hpp  Resource.hpp  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  Texture.hpp  UniformBuffer.hpp  Vertex.hpp
Engine/Source/Math/: Mat4.hpp  Math.hpp  Vec2.hpp  Vec3.hpp
Engine/Source/Platform/: DynamicLibrary.hpp  MappedFile.hpp  Platform.hpp  PlatformWin32.cpp  PlatformWin32.hpp
Engine/Source/Platform/Win32/: MappedFileWin32.cpp  PlatformWin32.cpp
Engine/Source/Renderer/: Buffer.hpp  Material.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp
Engine/Source/UI/: Anchor.cpp  Anchor.hpp  Layout.cpp  Layout.hpp  Manager.cpp  Manager.hpp  Panel.cpp  Panel.hpp  UI.hpp  Widget.cpp  Widget.hpp
Engine/Tests/: CMakeLists.txt  Mat4.tests.cpp
Engine/src/: Nihil.hpp  pch.hpp
Engine/src/Core/: Application.hpp  Defines.hpp  Engine.cpp  Engine.hpp  Event.cpp  Event.hpp  Exception.cpp  Exception.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Utilities.cpp  Utilities.hpp
Engine/src/Math/: Vec2.hpp
Engine/src/Platform/: Console.hpp  DynamicLibrary.hpp  Platform.hpp  Win32.hpp  Win32Platform.cpp
Engine/src/Platform/Win32/: Win32.hpp  Win32Platform.cpp
Engine/src/Renderer/: Renderer.cpp  Renderer.hpp  RendererPlugin.hpp
Engine/src/Renderer/Vulkan/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanException.cpp  VulkanException.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTypes.hpp
Engine/src/Renderer/Vulkan/Platform/: VulkanPlatform.hpp  VulkanPlatformWin32.cpp
OpenGLRenderer/: CMakeLists.txt
OpenGLRenderer/Source/: OpenGLBackend.cpp  OpenGLBackend.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLCommon.hpp  OpenGLException.cpp  OpenGLException.hpp  OpenGLLoader.cpp  OpenGLLoader.hpp  OpenGLMaterial.cpp  OpenGLMaterial.hpp  OpenGLMesh.cpp  OpenGLMesh.hpp  OpenGLPlatform.hpp  OpenGLPlatformWin32.cpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  pch.hpp
Sandbox/: CMakeLists.txt
Sandbox/Source/: Main.cpp  Sandbox.cpp  Sandbox.hpp
Sandbox/src/: Main.cpp  Sandbox.cpp  Sandbox.hpp
VulkanRenderer/: CMakeLists.txt
VulkanRenderer/Source/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.hpp  pch.hpp
VulkanRenderer/src/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanException.cpp  VulkanException.hpp  VulkanPlatform.hpp  VulkanPlatformWin32.cpp  VulkanPlugin.cpp  VulkanPlugin.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTypes.hpp  pch.hpp
VulkanRenderer/src/Platform/: VulkanPlatform.hpp  VulkanPlatformWin32.cpp
